<resources>
    <string name="app_name">Password Manager</string>

    <!-- SingIn fragments area -->
    <string name="sign_in_part1">Registration - User information</string>
    <string name="sign_in_part2">Registration - Password information</string>

    <string name="l_user_account">User account information :</string>
    <string name="hint_username">Username</string>
    <string name="hint_emailAddress">Email address</string>

    <string name="l_passwordAccount">Password account information :</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_new">New password</string>
    <string name="hint_password_old">Old password</string>
    <string name="hint_pwdConfirm">Confirm the password</string>
    <string name="hint_tagVisibility">Visible</string>

    <string name="bt_text_next">Next</string>
    <string name="bt_text_previous">Previous</string>
    <string name="bt_text_register">Register</string>

    <string name="l_note_email">* The email is only used to allow you to recover your password</string>

    <string name="invalid_email_error_signIn">Invalid email. ex: exemple@exemple.ex</string>
    <string name="empty_email_error_signIn">Email required.</string>
    <string name="empty_username_error_signIn">Required username.</string>
    <string name="empty_password_error_signIn">Required password.</string>
    <string name="not_correct_password_error_signIn">Password incorrect !!</string>
    <string name="empty_confirmation_error_signIn">Confirmation required.</string>
    <string name="diff_error_signIn">Confirmation does not match the password.</string>
    <!--******************************************************************************-->


    <!-- Log In activity -->
    <string name="title_log_in">Password Manager - log in</string>
    <string name="button_log_in">Log In</string>
    <string name="button_forgot_pass">Forgot password ?</string>
    <string name="logIn_empty_password">Required password.</string>
    <string name="hint_log">[UcefBen]</string>
    <!--******************************************************************************-->

    <!-- Password recovery -->
    <string name="title_password_recovery">Password recovery</string>
    <string name="label_password_recovery">
        This page will allow you to get a new password to access the application
        and recover your data. it\'s recommended that you change this password once
        logged in. This operation may take a few minutes.
    </string>
    <string name="button_recover">Recover password</string>
    <string name="message_recover">Your password is : </string>

    <!--******************************************************************************-->

    <!-- Menu Drawer -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="nav_label_home">Home</string>
    <string name="nav_label_profile">Profile</string>
    <string name="nav_label_ie">Import / Export</string>
    <string name="nav_label_pwd_gen">Password generator</string>
    <string name="nav_label_setting">Settings</string>
    <string name="nav_label_about">About</string>

    <!-- Home Fragment -->
    <string name="home_hint_site" translatable="false">Facebook</string>
    <string name="home_hint_email" translatable="false">MyEmailAddress@Gmail.com</string>
    <string name="home_hint_date" translatable="false">Last update : 27/08/2016</string>
    <string name="home_hint_last_conn" translatable="false">Last connection : 27/08/2016</string>

    <string name="home_add_edit_webSite">WebSite</string>
    <string name="home_add_edit_email">Username or email</string>
    <string name="home_add_edit_pwd">Password</string>
    <string name="home_add_edit_other">Other Information (Optional)</string>

    <string name="home_add_edit_ATitle">Adding a new account</string>
    <string name="home_add_edit_ETitle">Editing an account</string>
    <string name="home_add_edit_DTitle">Deleting an account</string>
    <string name="home_add_edit_VTitle">Account details</string>
    <string name="home_add_edit_DMessage">You\'r about to delete the following account :</string>
    <string name="home_add_edit_DMessage_suite">Would you like to continue ?</string>

    <string name="home_no_data">Sorry, no record found !!</string>

    <string name="empty_email_error_home">Email required.</string>
    <string name="empty_website_error_home">Required website.</string>
    <string name="empty_username_error_home">Required username or email.</string>
    <string name="empty_password_error_home">Required password.</string>
    <!--******************************************************************************-->

    <!-- Consulting an Account Fragment-->
    <string name="Consult_Account_details">Account details.</string>
    <!--******************************************************************************-->

    <!-- Profile Fragment -->
    <string name="button_save_profile">save</string>
    <!--******************************************************************************-->

    <!-- Import / Export Fragment -->
    <string name="ie_title">
        This tool lets you import and export your data.\n
        Note that it is recommended to backup your data frequently.
    </string>

    <string name="l_imports_title">Data import :</string>
    <string name="l_export_title">Data export :</string>

    <string name="l_export_import_noData_file">No data file found in the external storage !!</string>

    <string name="l_export_database_message_done">The database has been exported !!</string>
    <string name="l_import_database_message_done">The database has been imported !!</string>

    <string name="l_export_database_message_error">A a problem occurred while exporting the database !!</string>
    <string name="l_import_database_message_error">A a problem occurred while importing the database !!</string>

    <string name="l_export_xml_message_done">The data has been exported !!</string>
    <string name="l_import_xml_message_done">The data has been imported !!</string>
    <string name="l_export_xml_message_error">A problem occurred while exporting the data !!</string>
    <string name="l_import_xml_message_error">A problem occurred while importing the data !!</string>

    <string name="l_import_export_problem">A problem occurred while creating the BackUp folder !!</string>

    <string name="ie_title1">Export the dataBase</string>
    <string name="ie_title2">Import the dataBase</string>
    <string name="ie_title3">Export data</string>
    <string name="ie_title4">Import data</string>


    <string name="ie_title1_desc">
        This option helps you to export your dataBase to your phone
    </string>
    <string name="ie_title2_desc">
        This option helps you to import an existing dataBase.
        Note that this action will replace the current data.
    </string>
    <string name="ie_title3_desc">
        This option allows you to export your data to an XML file.
    </string>
    <string name="ie_title4_desc">
        This option allows you to import your data from an XML file.
    </string>
    <!--******************************************************************************-->

    <!-- Password generator Fragment -->
    <string name="label_pwd_gen_header">
        This tool allows you to generate a random password.
    </string>
    <string name="hint_pwd_gen">Generated password</string>
    <string name="button_generate">Generate password</string>
    <string name="l_pwd_gen">The generated password information :</string>
    <string name="l_pwd_gen_option">Options :</string>


    <string name="opt_title1">Use lower case </string>
    <string name="opt_title2">Use upper case</string>
    <string name="opt_title3">Use symbols</string>
    <string name="opt_title5">Use numbers</string>
    <string name="opt_title4">Password length :</string>

    <string name="opt_title1_desc">You can use the lowercase characters to generate the password (a-z).</string>
    <string name="opt_title2_desc">You can use the upper case characters to generate the password (A-Z).</string>
    <string name="opt_title3_desc">You can use the symbols to generate the password (,%:#;_).</string>
    <string name="opt_title5_desc">You can use the numbers to generate the password (1 &#8211; 9)</string>
    <string name="opt_title4_desc">Password length :</string>


    <string name="opt_lower_case_value" translatable="false">abcdefghijklmnopqrstuvwxyz</string>
    <string name="opt_upper_case_value" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="opt_symbols_value" translatable="false">!@#$%^&amp;*()_/-</string>
    <string name="opt_numbers_value" translatable="false">1234567890</string>
    <!--******************************************************************************-->

    <!-- Settings Fragment -->
    <string name="setting_list_view_items_lang">Language</string>
    <!--******************************************************************************-->

    <!-- About Fragment -->
    <string name="about_app_title">Password Manager</string>
    <string name="about_version">Version : 1.0.0</string>
    <string name="about_author">Author : Ucef Ben®</string>
    <string name="about_year">[Year]</string>
    <!--******************************************************************************-->

    <!-- Dialogs  -->
    <string name="dialog_button_save">Save</string>
    <string name="dialog_button_edit">Edit</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_cancel">Cancel</string>

    <!--******************************************************************************-->


    <!-- Error, Warnings and information messages-->
    <string name="registration_ok">The account is created correctly !!</string>
    <string name="registration_error">There was a problem when creating a new account!!</string>
    <string name="editing_account_error">There was a problem while saving the new data !!!!</string>
    <!--******************************************************************************-->


    <!-- Language Dialog-->
    <string name="lang_dialog_title">Select the language :</string>
    <string name="lang_dialog_english">English</string>
    <string name="lang_dialog_french">French</string>
    <string name="lang_dialog_arabic">Arabic</string>

    <!--******************************************************************************-->


</resources>
