<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.PasswordRecovery"
    android:background="@drawable/bg_image">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="40dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_password_recovery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/label_password_recovery"
            android:textAppearance="?android:attr/textAppearanceSmallInverse" />
    </LinearLayout>


    <ImageView
        android:id="@+id/iv_email_recovery"
        android:layout_width="30dip"
        android:contentDescription="@string/app_name"
        android:layout_height="40dip"
        android:layout_below="@+id/linearLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_email" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_email_recovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/iv_email_recovery"
        android:layout_toRightOf="@+id/iv_email_recovery">

        <EditText
            android:id="@+id/t_email_recovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_emailAddress"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_recover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_email_recovery"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/button_recover"
        android:theme="@style/MyButton" />


</RelativeLayout>
