<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myScroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ic_dialog_add_edit"
                android:layout_width="30dip"
                android:layout_height="40dip"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/about_app_title"
                android:src="@drawable/ic_add_circle" />

            <TextView
                android:id="@+id/label_password_recovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/ic_dialog_add_edit"
                android:layout_toRightOf="@+id/ic_dialog_add_edit"
                android:text="Adding a new account"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:textSize="20sp" />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/home_ae_input_siteWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/home_ae_t_siteWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/home_add_edit_webSite"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/home_ae_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home_ae_input_siteWeb"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/home_ae_t_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/home_add_edit_email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/home_ae_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home_ae_input_email"
            android:layout_marginEnd="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/home_ae_t_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/home_add_edit_pwd"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/iv_pwd_gen_prof"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/home_ae_input_email"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/password_gen"
            android:tag="@string/hint_tagVisibility" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/home_ae_input_otherInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home_ae_input_password"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/home_ae_t_otherInfo"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="start|top"
                android:hint="@string/home_add_edit_other"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="1"
                android:scrollbars="vertical"
                android:textSize="12sp" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
</ScrollView>