<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">


    <!--******************* Our CardView **********************-->
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="@color/bg_cardView"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">

        <!-- Our Container-->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent">

            <ImageView
                android:id="@+id/account_icon"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/l_EmailAddress"
                android:layout_alignTop="@+id/l_SiteWeb"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/about_app_title"
                android:src="@drawable/app_logo" />


            <!-- Add the controls that you want to show in this CardView-->
            <TextView
                android:id="@+id/l_SiteWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/account_icon"
                android:layout_toRightOf="@+id/account_icon"
                android:text="@string/home_hint_site"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/l_LastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_below="@+id/l_SiteWeb"
                android:text="@string/home_hint_date" />


            <TextView
                android:id="@+id/l_EmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l_SiteWeb"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/account_icon"
                android:layout_toRightOf="@+id/account_icon"
                android:text="@string/home_hint_email" />

            <ImageView
                android:id="@+id/bt_deleteAccount"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/l_LastUpdate"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_delete"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/bt_editAccount"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_below="@+id/l_LastUpdate"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@+id/bt_deleteAccount"
                android:layout_toStartOf="@+id/bt_deleteAccount"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_edit"
                android:visibility="invisible" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>